--- a/apps/pages/package.json
+++ b/apps/pages/package.json
@@ -10,7 +10,10 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
 	},
 	"dependencies": {
-		"hono": "^4.11.3"
+		"hono": "^4.11.3",
+		"@proof-of-build/schemas": "file:../../packages/schemas",
+		"@proof-of-build/core": "file:../../packages/core",
+		"aws4fetch": "^1.0.19"
 	},
 	"devDependencies": {
 		"@hono/vite-build": "^1.2.0",
